methods.flowerpot.FlowerCase.scala.error
Erreur de compilation :
FlowerCase:61: error: too many arguments for method motif1: (c: java.awt.Color)Unit
  motif1(Color.ORANGE , Color.BLUE)
        ^